@@ -1,7 +1,8 @@
 ﻿﻿[B]Changelog[/B]
-* Fixed: HTML Tags in descriptions of some Dutch regional channels
+* Fixed: TV Noord &amp; TV West main listings
 
 [I]Previous changes[/I]
+* Fixed: HTML Tags in descriptions of some Dutch regional channels
 * Fixed: AT5 programs, videos and streams
 * Fixed: L1 channel broke due to site changes
 * Fixed: AVT.sr Live Stream
